--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 html {
     scroll-behavior: smooth;
@@ -21,4 +22,7 @@ nav {
 li {
     list-style: none;
 }
-
+.klogo {
+    width: 50px;
+    height: 50px;
+}
