--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,13 @@
 html {
     scroll-behavior: smooth;
 }
+body {
+    display: grid;
+}
 
 /* NAVBAR */
 nav {
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     display: flex;
     justify-content: space-between;
     align-items: center;
