--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,13 @@ li {
     width: 50px;
     height: 50px;
 }
+/*to be edited later because AS*/
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1.5rem;
+    height: 80vh;
+}
