--- a/styles.css
+++ b/styles.css
@@ -33,5 +33,6 @@ li {
 /*to be edited later because AS*/
 .hero-container {
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
 }
