--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ li {
 .hero-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: right;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 10px;
+    flex-basis: 100px;
+    height: 400px;
+    margin: 0 50px;
 }
