edited the placements

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,15 @@ li {
     height: 400px;
     margin: 0 120px;
 }
-.hero-container > p {
+.greetings {
     font-family: "Inconsolata", monospace;
     color: #6a6b7b;
+}
+.name{
+    
+}
+.description {
+    font-family:"Inconsolata", monospace;
+    color: #6a6b7b;
+    font-size: 17px;
 }
