--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ nav {
 .right-nav {
     display: flex;
     gap: 3rem;
+    font-family:"Inconsolata", monospace;
+    color: #6a6b7b;
 }
 li {
     list-style: none;
